Added looschelders to bib

--- a/RechtsAssignment2.bib
+++ b/RechtsAssignment2.bib
@@ -1,1 +1,10 @@
+@Book{Looschelders2022,
+  author    = {Looschelders, Dirk},
+  publisher = {Verlag Franz Vahlen GmbH},
+  title     = {Schuldrecht Besonderer Teil},
+  year      = {2022},
+  isbn      = {9783800667383},
+  doi       = {10.15358/9783800667383},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
