Added BeckOK BGB and edition of Looschelders to bib file

--- a/RechtsAssignment2.bib
+++ b/RechtsAssignment2.bib
@@ -3,8 +3,21 @@
   publisher = {Verlag Franz Vahlen GmbH},
   title     = {Schuldrecht Besonderer Teil},
   year      = {2022},
+  edition   = {17},
   isbn      = {9783800667383},
   doi       = {10.15358/9783800667383},
+}
+
+@Book{Hau2024,
+  author    = {Prof. Dr. Wolfgang Hau and Prof. Dr. Roman Poseck and weitere},
+  publisher = {Beck},
+  title     = {BeckOK BGB},
+  year      = {2024},
+  address   = {München},
+  edition   = {72},
+  isbn      = {9783406609343},
+  series    = {Beck'scher Online-Kommentar},
+  ppn_gvk   = {821633988},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
