--- a/RechtsAssignment2.bib
+++ b/RechtsAssignment2.bib
@@ -10,14 +10,23 @@
 
 @Book{Hau2024,
   author    = {Prof. Dr. Wolfgang Hau and Prof. Dr. Roman Poseck and weitere},
-  publisher = {Beck},
+  publisher = {Verlag Beck},
   title     = {BeckOK BGB},
   year      = {2024},
-  address   = {München},
   edition   = {72},
   isbn      = {9783406609343},
   series    = {Beck'scher Online-Kommentar},
   ppn_gvk   = {821633988},
+}
+
+@Book{Brox2021,
+  author    = {Brox, Hans and Walker, Wolf-Dietrich},
+  publisher = {Verlag C.H.BECK oHG},
+  title     = {Besonderes Schuldrecht},
+  year      = {2021},
+  edition   = {45},
+  isbn      = {9783406758805},
+  doi       = {10.17104/9783406758805},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
