added Rechtswörterbuch to bib file

--- a/RechtsAssignment2.bib
+++ b/RechtsAssignment2.bib
@@ -10,7 +10,7 @@
 
 @Book{Hau2024,
   author    = {Prof. Dr. Wolfgang Hau and Prof. Dr. Roman Poseck and weitere},
-  publisher = {Verlag Beck},
+  publisher = {Verlag C.H. Beck},
   title     = {BeckOK BGB},
   year      = {2024},
   edition   = {72},
@@ -27,6 +27,14 @@
   edition   = {45},
   isbn      = {9783406758805},
   doi       = {10.17104/9783406758805},
+}
+
+@Book{Weber2024,
+  author    = {Weber},
+  publisher = {Verlag C.H. Beck},
+  title     = {Rechtswörterbuch},
+  year      = {2024},
+  edition   = {33},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
