added Allgemeines Schuldrecht Looschelders

--- a/RechtsAssignment2.bib
+++ b/RechtsAssignment2.bib
@@ -37,4 +37,13 @@
   edition   = {33},
 }
 
+@Book{Looschelders2022AT,
+  author    = {Looschelders, Dirk},
+  publisher = {Verlag Franz Vahlen GmbH},
+  title     = {Schuldrecht Allgemeiner Teil},
+  year      = {2022},
+  isbn      = {9783800668755},
+  doi       = {10.15358/9783800668755},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
