--- a/RechtsAssignment2.bib
+++ b/RechtsAssignment2.bib
@@ -46,4 +46,14 @@
   doi       = {10.15358/9783800668755},
 }
 
+@Book{Medicus2017,
+  author    = {Medicus, Dieter and Petersen, Jens},
+  publisher = {Verlag Franz Vahlen GmbH},
+  title     = {Bürgerliches Recht},
+  year      = {2017},
+  edition   = {26},
+  isbn      = {9783800655489},
+  doi       = {10.15358/9783800655489},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
