--- a/RechtsAssignment2.bib
+++ b/RechtsAssignment2.bib
@@ -1,4 +1,28 @@
-@Book{Looschelders2022,
+@inproceedings{iso18004,
+  title     = {{ISO/IEC 18004: Information technology -- Automatic identification and data capture techniques -- QR code bar code symbology specification}},
+  booktitle = {ISO/IEC 18004:2015},
+  author    = {{International Organization for Standardization}},
+  year      = {2015},
+}
+
+@online{beck_online,
+  author    = "",
+  title     = "Beckscher Online Kommentar",
+  url       = "https://beck-online.beck.de/?vpath=bibdata/komm/beckok_41_BandBGB/BGB/cont/beckok.BGB.p823.htm",
+  note      = "Online verfügbar"
+}
+
+@incollection{schuldrecht_allgemeiner,
+  author    = "",
+  title     = "Schuldrecht Allgemeiner und Besonderer Teil",
+  booktitle = "Schuldrecht",
+  publisher = "De Gruyter",
+  year      = {2022},
+  pages     = {V--VI},
+  doi       = {10.1515/9783110667783-202}
+}
+
+@Book{looschelders_schuldrecht,
   author    = {Looschelders, Dirk},
   publisher = {Verlag Franz Vahlen GmbH},
   title     = {Schuldrecht Besonderer Teil},
@@ -6,54 +30,6 @@
   edition   = {17},
   isbn      = {9783800667383},
   doi       = {10.15358/9783800667383},
-}
-
-@Book{Hau2024,
-  author    = {Prof. Dr. Wolfgang Hau and Prof. Dr. Roman Poseck and weitere},
-  publisher = {Verlag C.H. Beck},
-  title     = {BeckOK BGB},
-  year      = {2024},
-  edition   = {72},
-  isbn      = {9783406609343},
-  series    = {Beck'scher Online-Kommentar},
-  ppn_gvk   = {821633988},
-}
-
-@Book{Brox2021,
-  author    = {Brox, Hans and Walker, Wolf-Dietrich},
-  publisher = {Verlag C.H.BECK oHG},
-  title     = {Besonderes Schuldrecht},
-  year      = {2021},
-  edition   = {45},
-  isbn      = {9783406758805},
-  doi       = {10.17104/9783406758805},
-}
-
-@Book{Weber2024,
-  author    = {Weber},
-  publisher = {Verlag C.H. Beck},
-  title     = {Rechtswörterbuch},
-  year      = {2024},
-  edition   = {33},
-}
-
-@Book{Looschelders2022AT,
-  author    = {Looschelders, Dirk},
-  publisher = {Verlag Franz Vahlen GmbH},
-  title     = {Schuldrecht Allgemeiner Teil},
-  year      = {2022},
-  isbn      = {9783800668755},
-  doi       = {10.15358/9783800668755},
-}
-
-@Book{Medicus2017,
-  author    = {Medicus, Dieter and Petersen, Jens},
-  publisher = {Verlag Franz Vahlen GmbH},
-  title     = {Bürgerliches Recht},
-  year      = {2017},
-  edition   = {26},
-  isbn      = {9783800655489},
-  doi       = {10.15358/9783800655489},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
