--- a/RechtsAssignment2.bib
+++ b/RechtsAssignment2.bib
@@ -32,4 +32,13 @@
   doi       = {10.15358/9783800667383},
 }
 
+@misc{BGH2014,
+  author       = {Bundesgerichtshof},
+  title        = {Urteil vom 25. Februar 2014 – VI ZR 299/13},
+  year         = {2014},
+  howpublished = {BGH NJW 2014, 1579},
+  url          = {https://www.bundesgerichtshof.de},
+  note         = {Verkehrssicherungspflicht, Haftung},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
