--- a/RechtsAssignment2.bib
+++ b/RechtsAssignment2.bib
@@ -56,7 +56,7 @@
 	urldate = {2025-02-23},
 	booktitle = {Schuldrecht},
 	publisher = {De Gruyter},
-	collaborator = {Fikentscher, Wolfgang and Heinemann, Andreas},
+	author = {Fikentscher, Wolfgang and Heinemann, Andreas},
 	month = mar,
 	year = {2022},
 	doi = {10.1515/9783110667783-202},
