--- a/deinemom.bib
+++ b/deinemom.bib
@@ -29,7 +29,7 @@
 }
 
 @book{krafft_kommunales_2016,
-	title = {Kommunales {Haftungsrecht} in der {Praxis} {Verkehrssicherungspflichten}:},
+	title = {{Verkehrssicherungspflichten}},
 	isbn = {978-3-503-16786-9},
 	shorttitle = {Kommunales {Haftungsrecht} in der {Praxis} {Verkehrssicherungspflichten}},
 	url = {https://esv-elibrary.de/book/99.160005/9783503167869},
