--- a/deinemom.bib
+++ b/deinemom.bib
@@ -20,7 +20,7 @@
 	urldate = {2025-02-23},
 	booktitle = {Schuldrecht},
 	publisher = {De Gruyter},
-	collaborator = {Fikentscher, Wolfgang and Heinemann, Andreas},
+	author = {Fikentscher, Wolfgang and Heinemann, Andreas},
 	month = mar,
 	year = {2022},
 	doi = {10.1515/9783110667783-202},
@@ -84,4 +84,12 @@
 	year = {2020},
 	doi = {10.1007/978-3-662-62197-4},
 	file = {PDF:/Users/tillburdorf/Zotero/storage/G8WGMSB4/Sakowski - 2020 - Grundlagen des Bürgerlichen Rechts.pdf:application/pdf},
+}
+
+@online{Rüssmann,
+  author    = {Rüßmann, Helmut},
+  title     = {Unrechtskonzeption},
+  year      = {2006},
+  url       = {https://ruessmann.jura.uni-saarland.de/bvr2006/Vorlesung/unrechtskonzeption.htm},
+  note      = {Abgerufen am: 03. März 2025}
 }
