--- a/deinemom.bib
+++ b/deinemom.bib
@@ -91,5 +91,5 @@
   title     = {Unrechtskonzeption},
   year      = {2006},
   url       = {https://ruessmann.jura.uni-saarland.de/bvr2006/Vorlesung/unrechtskonzeption.htm},
-  note      = {Abgerufen am: 03. März 2025}
+  note      = {Abgerufen: 03. März 2025}
 }
