--- a/bibliography.bib
+++ b/bibliography.bib
@@ -7,6 +7,7 @@
 	urldate = {2025-02-23},
 	publisher = {Verlag Franz Vahlen GmbH},
 	author = {Looschelders, Dirk},
+	edition = {17},
 	year = {2022},
 	doi = {10.15358/9783800667383},
 	file = {PDF:/Users/tillburdorf/Zotero/storage/M95AX4FS/Looschelders - 2022 - Schuldrecht Besonderer Teil.pdf:application/pdf},
@@ -23,6 +24,7 @@
 	author = {Fikentscher, Wolfgang and Heinemann, Andreas},
 	month = mar,
 	year = {2022},
+	edition = {12},
 	doi = {10.1515/9783110667783-202},
 	pages = {V--VI},
 	file = {PDF:/Users/tillburdorf/Zotero/storage/J9AVEPKW/2022 - Vorwort zur 12. Auflage.pdf:application/pdf},
@@ -40,6 +42,7 @@
 	author = {Krafft, Georg and Rotermund, Carsten},
 	month = jul,
 	year = {2016},
+	edition = {6},
 	doi = {10.37307/b.978-3-503-16786-9},
 	file = {PDF:/Users/tillburdorf/Zotero/storage/CWU95CJ6/Krafft and Rotermund - 2016 - Kommunales Haftungsrecht in der Praxis Verkehrssicherungspflichten.pdf:application/pdf},
 }
@@ -53,6 +56,7 @@
 	publisher = {Verlag Franz Vahlen GmbH},
 	author = {Kötz, Hein and Wagner, Gerhard},
 	year = {2017},
+	edition = {13},
 	doi = {10.15358/9783800655502},
 	file = {PDF:/Users/tillburdorf/Zotero/storage/DFJA28EA/Kötz and Wagner - 2017 - Deliktsrecht.pdf:application/pdf},
 }
@@ -66,6 +70,7 @@
 	publisher = {Verlag Franz Vahlen GmbH},
 	author = {Looschelders, Dirk},
 	year = {2022},
+	edition = {20},
 	doi = {10.15358/9783800668755},
 	file = {PDF:/Users/tillburdorf/Zotero/storage/W9TLNLBE/Looschelders - 2022 - Schuldrecht Allgemeiner Teil.pdf:application/pdf},
 }
@@ -82,6 +87,7 @@
 	publisher = {Springer Berlin Heidelberg},
 	author = {Sakowski, Klaus},
 	year = {2020},
+	edition = {5},
 	doi = {10.1007/978-3-662-62197-4},
 	file = {PDF:/Users/tillburdorf/Zotero/storage/G8WGMSB4/Sakowski - 2020 - Grundlagen des Bürgerlichen Rechts.pdf:application/pdf},
 }
