--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,15 +1,15 @@
-@book{looschelders_schuldrecht_2022,
-	title = {Schuldrecht {Besonderer} {Teil}},
-	isbn = {978-3-8006-6738-3},
-	url = {https://www.beck-elibrary.de/index.php?doi=10.15358/9783800667383},
-	language = {de},
-	urldate = {2025-02-23},
-	publisher = {Verlag Franz Vahlen GmbH},
-	author = {Looschelders, Dirk},
-	edition = {17},
-	year = {2022},
-	doi = {10.15358/9783800667383},
-	file = {PDF:/Users/tillburdorf/Zotero/storage/M95AX4FS/Looschelders - 2022 - Schuldrecht Besonderer Teil.pdf:application/pdf},
+@Book{looschelders_schuldrecht_2022,
+  author    = {Looschelders, Dirk},
+  title     = {Schuldrecht {Besonderer} {Teil}},
+  doi       = {10.15358/9783800667383},
+  edition   = {17},
+  isbn      = {978-3-8006-6738-3},
+  language  = {de},
+  publisher = {Verlag Franz Vahlen GmbH},
+  url       = {https://www.beck-elibrary.de/index.php?doi=10.15358/9783800667383},
+  urldate   = {2025-02-23},
+  file      = {PDF:/Users/tillburdorf/Zotero/storage/M95AX4FS/Looschelders - 2022 - Schuldrecht Besonderer Teil.pdf:application/pdf},
+  year      = {2022},
 }
 
 @incollection{fikentscher_schuldrecht_2022,
@@ -23,7 +23,6 @@
 	author = {Fikentscher, Wolfgang and Heinemann, Andreas},
 	month = mar,
 	year = {2022},
-	edition = {12},
 	doi = {10.1515/9783110667783-202},
 	pages = {V--VI},
 	file = {PDF:/Users/tillburdorf/Zotero/storage/J9AVEPKW/2022 - Vorwort zur 12. Auflage.pdf:application/pdf},
@@ -41,7 +40,6 @@
 	author = {Krafft, Georg and Rotermund, Carsten},
 	month = jul,
 	year = {2016},
-	edition = {6},
 	doi = {10.37307/b.978-3-503-16786-9},
 	file = {PDF:/Users/tillburdorf/Zotero/storage/CWU95CJ6/Krafft and Rotermund - 2016 - Kommunales Haftungsrecht in der Praxis Verkehrssicherungspflichten.pdf:application/pdf},
 }
@@ -55,7 +53,6 @@
 	publisher = {Verlag Franz Vahlen GmbH},
 	author = {Kötz, Hein and Wagner, Gerhard},
 	year = {2017},
-	edition = {13},
 	doi = {10.15358/9783800655502},
 	file = {PDF:/Users/tillburdorf/Zotero/storage/DFJA28EA/Kötz and Wagner - 2017 - Deliktsrecht.pdf:application/pdf},
 }
@@ -69,13 +66,13 @@
 	publisher = {Verlag Franz Vahlen GmbH},
 	author = {Looschelders, Dirk},
 	year = {2022},
-	edition = {20},
 	doi = {10.15358/9783800668755},
 	file = {PDF:/Users/tillburdorf/Zotero/storage/W9TLNLBE/Looschelders - 2022 - Schuldrecht Allgemeiner Teil.pdf:application/pdf},
 }
 
 @book{sakowski_grundlagen_2020,
 	address = {Berlin, Heidelberg},
+	series = {{BA} {KOMPAKT}},
 	title = {Grundlagen des {Bürgerlichen} {Rechts}},
 	copyright = {http://www.springer.com/tdm},
 	isbn = {978-3-662-62196-7 978-3-662-62197-4},
@@ -85,7 +82,6 @@
 	publisher = {Springer Berlin Heidelberg},
 	author = {Sakowski, Klaus},
 	year = {2020},
-	edition = {5},
 	doi = {10.1007/978-3-662-62197-4},
 	file = {PDF:/Users/tillburdorf/Zotero/storage/G8WGMSB4/Sakowski - 2020 - Grundlagen des Bürgerlichen Rechts.pdf:application/pdf},
 }
@@ -97,3 +93,5 @@
   url       = {https://ruessmann.jura.uni-saarland.de/bvr2006/Vorlesung/unrechtskonzeption.htm},
   note      = {Abgerufen: 03. März 2025}
 }
+
+@Comment{jabref-meta: databaseType:biblatex;}
