--- a/bibliography.bib
+++ b/bibliography.bib
@@ -13,7 +13,7 @@
 }
 
 @incollection{fikentscher_schuldrecht_2022,
-	title = {Schuldrecht {Allgemeiner} und {Besonderer} {Teil}},
+	title = {Schuldrecht AT/BT},
 	isbn = {978-3-11-066778-3},
 	url = {https://www.degruyter.com/document/doi/10.1515/9783110667783-202/html},
 	language = {de},
